2005-09-25  Conrad T. Pino  <Conrad@Pino.com>

	* rcs.c: Use "#ifdef HAVE_FSYNC" just like every where else.

2005-09-25  Conrad T. Pino  <Conrad@Pino.com>

	* buffer.c client.h socket-client.h:  Remove HAVE_WINSOCK_H macro &
	change <winsock.h> to <sys/socket.h> include.

	* server.c:  Remove HAVE_WINSOCK_H and <winsock.h> include.

2005-09-25  Derek Price  <derek@ximbiot.com>

	* rcs.c (rcs_internal_unlockfile): Fsync files before renaming them.
	Patch from Rahul Bhargava <rahul@wandisco.com>.

	* cvs.h, filesubr.c, main.c, server.c:
	s/push_cvs_tmp_dir/push_cvs_temp_dir/.

	* main.c (get_cvs_temp_dir): Use new get_system_temp_dir function.
	(push_env_temp_dir): Move to...
	* filesubr.c (push_env_temp_dir): ...here to split from Windows.
	(get_system_temp_dir): New function.
	* cvs.h (get_cvs_temp_dir, push_env_temp_dir): Add protos.

	* buffer.c (fd_buffer_input): Fix spelling in header comment block.

2005-09-24  Derek Price  <derek@ximbiot.com>

	* socket-client.c: Check HAVE_CONFIG_H, not HAVE_CONFIG.

	* socket-client.c, socket-client.h: Minor cleanup.

	* Makefile.am (cvs_SOURCES): Move socket-client.[ch] to...
	(EXTRA_cvs_SOURCES): ...here to avoid compiling them.
	* socket-client.c (init_sockaddr), socket-client.h (init_sockaddr):
	Move to...
	* client.c (init_sockaddr), client.c (init_sockaddr): ...here.

	* socket-client.c (socket_buffer_input): Avoid overflow problems.

	* socket-client.c: General cleanup.

2005-09-23  Larry Jones  <lawrence.jones@ugs.com>

	* checkout.c (export_usage): Note that -r requires a tag.

2005-09-22  Derek Price  <derek@ximbiot.com>

	* classify.c (Classify_File): Correct comment.

2005-09-22  Larry Jones  <lawrence.jones@ugs.com>

	* patch.c (patch_usage): Document -k option.

2005-09-22  Derek Price  <derek@ximbiot.com>

	* classify.c (Classify_File): If a file had a conflict and the
	timestamp hasn't changed, it still has a conflict.  Add comment about
	how T_MODIFIED could later turn out to have conflict markers and why